# StarbuckNoteTaker

./: .gitattributes  .gitignore  AGENTS.md  MainActivity.kt  README.md  TASKS.md  build.gradle  build_tensor.ipynb  build_tensor.py  build_tensor_improved.ipynb  gradle.properties  index.html  local.properties  script.js  settings.gradle  setup_persist.sh  styles.css  training_data.py
.github/workflows/: android-ci.yml  build_apk.yml  deploy.yml  generate-note-classifier-assets.yml  test-mlc-install.yml
app/: build.gradle  proguard-rules.pro  starbucknotetaker.jks  starbuckstreamer.jks.b64
app/src/main/: AndroidManifest.xml  starbuckstreamer.jks
app/src/main/assets/: DEPLOYMENT_INSTRUCTIONS.txt  DEPLOYMENT_README.md  Llama-3.2-1B-Instruct-q4f32_1-MLC-android-x86_64.tar  Llama-3.2-3B-Instruct-q4f16_0-MLC-android-x86_64.tar  README.md  category_mapping.json  deployment_metadata.json  note_classifier.tflite  note_classifier_smoke_test_output.txt  tokenizer_vocabulary_v2.txt
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
config/: AI_AGENT_PROMPTS.txt
docs/: ADK_LOCAL_AGENT.md  CRAWL4AI_RESEARCH.md  ON_DEVICE_WEB_RESEARCH.md
mlc4j/: build.gradle
mlc4j/src/main/: AndroidManifest.xml
scripts/: align_elf_segments.py  build_mlc_tvm_runtime.sh  capture_tflite_smoke_test.py  compile_model_tar.sh  fetch_mlc_native.sh  generate_summarizer_assets.py  install_mlc_llm.sh  mlc_llm_compile_wrapper.py  mlc_python_env.sh  patch_mlc_prepare_libs.py  patch_mlc_runtime_compat.py  reclaim_ci_disk_space.sh  test_mlc_install.sh  tvm_compat.c
(+178 files in other folders)
